# Optical-grid

./: .gitignore  Analise.cpp  Analise.h  CMakeLists.txt  LICENSE  README.md  control.h  functions.cpp  functions.h  gtest_lite.h  ido.cpp  ido.h  light_sensitive_layer.cpp  light_sensitive_layer.h  light_source.cpp  light_source.h  main.cpp  main_loop.cpp  main_loop.h  maintainer.cpp  maintainer.h  matrix.cpp  matrix.h  memtrace.h  my_types.h  optical_grid.cpp  optical_grid.h  resource.cpp  resource.h  sajat_sdl.cpp  sajat_sdl.h  sajat_tipusok.h  time.cpp  time.h
